[project]
name = "homeassistant-pycupra"
version = "0.2.14"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "TCH",
    "RUF",
]
ignore = [
    "E501",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.pycupra"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true

# TODO: Tighten mypy config progressively as type errors are fixed in Phase 1
# Target: check_untyped_defs = true, warn_return_any = true
disable_error_code = ["union-attr", "return-value", "arg-type", "index", "attr-defined", "var-annotated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
